add title and gitignore

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-
 <html>
 <head>
-  <meta name="charset" content="UTF-8">
-  <meta name="description" content="Mochileros sin fronteras">
+    <title>Mochileros sin fronteras</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- STYLE -->
+    <link rel="stylesheet" href="style/styles.css" />
+    <link rel="favicon" href="images/icons/favicon.ico" />
 </head>
 
 <body>
-   
+   uwu
 </body>
 </html>
 
