--- a/index.html
+++ b/index.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <title>Mochileros sin fronteras</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- STYLE -->
-    <link rel="stylesheet" href="style/styles.css" />
-    <link rel="favicon" href="images/icons/favicon.ico" />
+    <link rel="stylesheet" href="style/styles.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon-32x32.png">
 </head>
 
 <body>
-   uwu
+
+    <header class="align_all_items_center">
+        <div id="site_title">Mochileros sin fronteras</div>
+        <div id="site_shortcuts">
+            <div>Inicion</div>
+            <div>Experiencias</div>
+            <div>Consejos</div>
+            <div>Foro</div>
+            <div>Contacto</div>
+        </div>
+        <div class="align_all_items_center" style="margin-left: auto">
+            <img src="images/logo.png" alt="logo">
+            <div id="language_selector" class="align_all_items_center">
+                <div>ES</div>
+                <img src="images/arrow.png" alt="downwards arrow">
+            </div>
+        </div>
+    </header>
+
+    <section>
+    </section>
+
+    <section>
+    </section>
+
+    <section>
+    </section>
+
 </body>
 </html>
 
