--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <!-- STYLE -->
     <link rel="stylesheet" href="style/styles.css">
     <link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon-32x32.png">
-</head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+  </head>
 
 <body>
 
@@ -24,7 +26,7 @@
             <img src="images/logo.png" alt="logo">
             <div id="language_selector" class="align_all_items_center">
                 <div>ES</div>
-                <img src="images/arrow.png" alt="downwards arrow">
+                <span class="material-icons">arrow_drop_down</span>
             </div>
         </div>
     </header>
