no se que hacer :(

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
     <section id="main">
         <div id="main_content" class="align_all_items_center">
             <article>
+                <div class="background_image align_all_items_center">
+                    <div class="box_shadow_background foreground_text">
+                        <h4>Comparte y descubre viajes mochileros de larga distancia</h4>
+                    </div>
+                </div>
             </article>
 
             <article>
