--- a/index.html
+++ b/index.html
@@ -35,11 +35,9 @@
 
     <section id="main">
         <div id="main_content" class="align_all_items_center">
-            <article>
-                <div class="background_image align_all_items_center">
-                    <div class="box_shadow_background foreground_text">
-                        <h4>Comparte y descubre viajes mochileros de larga distancia</h4>
-                    </div>
+            <article id="main_heading" class="align_all_items_center">
+                <div class="box_shadow_background foreground_text">
+                    <h4>Comparte y descubre viajes mochileros de larga distancia</h4>
                 </div>
             </article>
 
