Changed width of text box

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="main">
         <div id="main_content" class="align_all_items_center">
             <article id="main_heading" class="align_all_items_center">
-                <div class="box_shadow_background foreground_text">
+                <div id="partial_width_box" class="box_shadow_background foreground_text align_all_items_center">
                     <h4>Comparte y descubre viajes mochileros de larga distancia</h4>
                 </div>
             </article>
