--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
                 </div>
             </article>
 
+
             <article>
             </article>
 
             <article>
+                <div class="container">
+                    <div></div>
+                </div>
             </article>
         </div>
 
@@ -66,7 +70,30 @@
 
 
 
-    <footer>
+    <footer class="align_all_items_center">
+        <div class="align_all_items_center" id=left_footer">
+            <p>@2025 mochileros sin fronteras</p>
+        </div>
+        <div id="center_footer" class="align_all_items_center">
+            <p>Sobre nosotros. Política de Privacidad. Ayuda</p>
+        </div>
+        <div class="align_all_items_center" style="margin-left: auto; margin-right: 10px;"> 
+            <a href="https://www.instagram.com/" target="_blank">
+                <img src="/images/icons/Instagram.png"
+                alt="Logo de Instagram"
+                style="width: 40px; height: 40px;">
+            </a>
+            <a href="https://www.tiktok.com/explore" target="_blank">
+                <img src="/images/icons/Tiktok.png"
+                alt="Logo de TikTok"
+                style="width: 40px; height: 40px;">
+            </a>
+            <a href="https://youtu.be/fHPysRp8FWg?si=qZZO_LRgjP2ic3f_" target="_blank">
+                <img src="/images/icons/Youtube_logo.png"
+                alt="Logo de Youtube"
+                style="width: 40px;  height: 40px;">
+            </a>
+        </div>
     </footer>
 
 </body>
