missing style on log field

--- a/index.html
+++ b/index.html
@@ -45,26 +45,29 @@
 
 
             <article id="images_carrousel" class="align_all_items_center">
-                <div class="align_all_items_center" style="min-width: 6%;">
+                <div class="align_all_items_center" style="min-width: 10%;">
                     <div class="nav_button align_all_items_center box_shadow_background">
                         <span class="material-icons">keyboard_arrow_left</span>
                     </div>
                 </div>
                 <div id="scroll_experiences" class="align_all_items_center">
                     <div id="experiences_title">
-                        <div class="simple_box_border foreground_text" style="margin-right: auto">
-                            <b>Paquete Andorrano libre de impuestos</b>
+                        <div class="simple_box_border foreground_text align_all_items_center"
+                             style="margin: 0 auto 0 30px">
+                            <p><b>Paquete Andorrano libre de impuestos</b></p>
                         </div>
-                        <div class="simple_box_border foreground_text"> <b>1200€</b> </div>
+                        <div class="simple_box_border foreground_text align_all_items_center"
+                             style="margin: 0 30px 0 auto"> <p><b>1200€</b></p> </div>
                     </div>
 
                     <div id="experiences_description" class="simple_box_border foreground_text">
-                        Visitas al centro y a la montaña, con transporte incluido.
+                        <p>Visitas al centro y a la montaña, con transporte incluido.</p>
                     </div>
 
-                    <div id="buy_button" class="box_shadow_background foreground_text align_all_items_center"> Comprar </div>
+                    <div id="buy_button" class="box_shadow_background foreground_text align_all_items_center">
+                        <p>Comprar</p> </div>
                 </div>
-                <div class="align_all_items_center" style="min-width: 6%;">
+                <div class="align_all_items_center" style="min-width: 10%;">
                     <div class="nav_button align_all_items_center box_shadow_background">
                         <span class="material-icons">keyboard_arrow_right</span>
                     </div>
@@ -91,7 +94,43 @@
                         <input type="checkbox" id="recordar_checkbox" class="box_shadow_background">
                         Recordar mis credenciales
                     </label>
+                    <label class="align_all_items_center" style="width: 100%; margin-top: 20px">
+                        <input type="submit"
+                               value="Iniciar Sesión"
+                               class="box_shadow_background submit_user"
+                               style="margin-right: 20px">
+                        <input type="submit"
+                               value="Registro"
+                               class="box_shadow_background submit_user"
+                               style="margin-left: 20px">
+                    </label>
                 </form>
+            </div>
+
+            <hr>
+
+            <div id="top_recommended" class="align_all_items_center">
+                <h3>Top destinos mochileros</h3>
+                <div>
+                    <a>Tailandia</a>
+                    <a>Bolivia</a>
+                    <a>Nepal</a>
+                </div>
+
+                <h3>Consejos rápidos</h3>
+                <div>
+                    <a>Lleva seguro médico</a>
+                    <a>Infórmate sobre visados</a>
+                    <a>Viaja ligero</a>
+                </div>
+
+                <h3>Próximos encuentros</h3>
+                <div>
+                    <a>Madrid · 12/10</a>
+                    <a>Barcelona · 25/10</a>
+                    <a>Valencia · 08/11</a>
+                </div>
+
             </div>
         </aside>
     </section>
