Added grid with images

--- a/index.html
+++ b/index.html
@@ -74,9 +74,95 @@
                 </div>
             </article>
 
-            <article>
-                <div class="container">
-                    <div></div>
+            <article id="grid">
+                <div id="grid_title">
+                    <h2>Experiencias de la comunidad mochilera</h2>
+                </div>
+                <div id="container">
+                    <div class="individual_container">
+                        <div class="title_container">
+                            <p><b>Hostal en Katmandú</b></p>
+                        </div>
+                        <img src="images/Katmandu.webp" alt="Katmandu" class="images_grid">
+                        <div class="right_container">
+                            <div class="nav_button align_all_items_center">
+                                <span class="material-icons">favorite</span>
+                            </div>
+                            <div class="box_shadow_background align_all_items_center show_more">
+                                <p>Ver más</p>
+                            </div>
+                        </div>
+                    </div>
+                   <div class="individual_container">
+                        <div class="title_container">
+                            <p><b>Sudamérica en bus</b></p>
+                        </div>
+                        <img src="images/Iguazu.jpg" alt="Cataratas del Iguazu" class="images_grid">
+                        <div class="right_container">
+                            <div class="nav_button align_all_items_center">
+                                <span class="material-icons">favorite</span>
+                            </div>
+                            <div class="box_shadow_background align_all_items_center show_more">
+                                <p>Ver más</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="individual_container">
+                        <div class="title_container">
+                            <p><b>Visado para india</b></p>
+                        </div>
+                        <img src="images/india.jpg" alt="Taj Mahal" class="images_grid">
+                        <div class="right_container">
+                            <div class="nav_button align_all_items_center">
+                                <span class="material-icons">favorite</span>
+                            </div>
+                            <div class="box_shadow_background align_all_items_center show_more">
+                                <p>Ver más</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="individual_container">
+                        <div class="title_container">
+                            <p><b>Vietnam, ruta en moto</b></p>
+                        </div>
+                        <img src="images/vietnam.jpeg" alt="Lago en Vietnam" class="images_grid">
+                        <div class="right_container">
+                            <div class="nav_button align_all_items_center">
+                                <span class="material-icons">favorite</span>
+                            </div>
+                            <div class="box_shadow_background align_all_items_center show_more">
+                                <p>Ver más</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="individual_container">
+                        <div class="title_container">
+                            <p><b>Trekking en Perú</b></p>
+                        </div>
+                        <img src="images/Machu_Picchu.jpg" alt="Machu Picchu" class="images_grid">
+                        <div class="right_container">
+                            <div class="nav_button align_all_items_center">
+                                <span class="material-icons">favorite</span>
+                            </div>
+                            <div class="box_shadow_background align_all_items_center show_more">
+                                <p>Ver más</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="individual_container">
+                        <div class="title_container">
+                            <p><b>Safari en Tanzania</b></p>
+                        </div>
+                        <img src="images/que-hacer-tanzania.webp" alt="Globos aerostáticos en Tanzania" class="images_grid">
+                        <div class="right_container">
+                            <div class="nav_button align_all_items_center">
+                                <span class="material-icons">favorite</span>
+                            </div>
+                            <div class="box_shadow_background align_all_items_center show_more">
+                                <p>Ver más</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </article>
         </div>
