primera pagina acabada

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div id="container">
                     <div class="individual_container">
                         <div class="title_container">
-                            <p><b>Hostal en Katmandú</b></p>
+                            <b>Hostal en Katmandú</b>
                         </div>
                         <img src="images/Katmandu.webp" alt="Katmandu" class="images_grid">
                         <div class="right_container">
@@ -89,13 +89,13 @@
                                 <span class="material-icons">favorite</span>
                             </div>
                             <div class="box_shadow_background align_all_items_center show_more">
-                                <p>Ver más</p>
+                                Ver más
                             </div>
                         </div>
                     </div>
-                   <div class="individual_container">
+                    <div class="individual_container">
                         <div class="title_container">
-                            <p><b>Sudamérica en bus</b></p>
+                            <b>Sudamérica en bus</b>
                         </div>
                         <img src="images/Iguazu.jpg" alt="Cataratas del Iguazu" class="images_grid">
                         <div class="right_container">
@@ -103,13 +103,13 @@
                                 <span class="material-icons">favorite</span>
                             </div>
                             <div class="box_shadow_background align_all_items_center show_more">
-                                <p>Ver más</p>
+                                Ver más
                             </div>
                         </div>
                     </div>
                     <div class="individual_container">
                         <div class="title_container">
-                            <p><b>Visado para india</b></p>
+                            <b>Visado para india</b>
                         </div>
                         <img src="images/india.jpg" alt="Taj Mahal" class="images_grid">
                         <div class="right_container">
@@ -117,13 +117,13 @@
                                 <span class="material-icons">favorite</span>
                             </div>
                             <div class="box_shadow_background align_all_items_center show_more">
-                                <p>Ver más</p>
+                                Ver más
                             </div>
                         </div>
                     </div>
                     <div class="individual_container">
                         <div class="title_container">
-                            <p><b>Vietnam, ruta en moto</b></p>
+                            <b>Vietnam, ruta en moto</b>
                         </div>
                         <img src="images/vietnam.jpeg" alt="Lago en Vietnam" class="images_grid">
                         <div class="right_container">
@@ -131,13 +131,13 @@
                                 <span class="material-icons">favorite</span>
                             </div>
                             <div class="box_shadow_background align_all_items_center show_more">
-                                <p>Ver más</p>
+                                Ver más
                             </div>
                         </div>
                     </div>
                     <div class="individual_container">
                         <div class="title_container">
-                            <p><b>Trekking en Perú</b></p>
+                            <b>Trekking en Perú</b>
                         </div>
                         <img src="images/Machu_Picchu.jpg" alt="Machu Picchu" class="images_grid">
                         <div class="right_container">
@@ -145,13 +145,13 @@
                                 <span class="material-icons">favorite</span>
                             </div>
                             <div class="box_shadow_background align_all_items_center show_more">
-                                <p>Ver más</p>
+                                Ver más
                             </div>
                         </div>
                     </div>
                     <div class="individual_container">
                         <div class="title_container">
-                            <p><b>Safari en Tanzania</b></p>
+                            <b>Safari en Tanzania</b>
                         </div>
                         <img src="images/que-hacer-tanzania.webp" alt="Globos aerostáticos en Tanzania" class="images_grid">
                         <div class="right_container">
@@ -159,7 +159,7 @@
                                 <span class="material-icons">favorite</span>
                             </div>
                             <div class="box_shadow_background align_all_items_center show_more">
-                                <p>Ver más</p>
+                                Ver más
                             </div>
                         </div>
                     </div>
@@ -196,21 +196,21 @@
             <hr>
 
             <div id="top_recommended" class="align_all_items_center">
-                <h3>Top destinos mochileros</h3>
+                <div class="recommended_titles"><b>Top destinos mochileros</b></div>
                 <div>
                     <a>Tailandia</a>
                     <a>Bolivia</a>
                     <a>Nepal</a>
                 </div>
 
-                <h3>Consejos rápidos</h3>
+                <div class="recommended_titles"><b>Consejos rápidos</b></div>
                 <div>
                     <a>Lleva seguro médico</a>
                     <a>Infórmate sobre visados</a>
                     <a>Viaja ligero</a>
                 </div>
 
-                <h3>Próximos encuentros</h3>
+                <div class="recommended_titles"><b>Próximos encuentros</b></div>
                 <div>
                     <a>Madrid · 12/10</a>
                     <a>Barcelona · 25/10</a>
