--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <header class="align_all_items_center">
-        <div id="site_title">Mochileros sin fronteras</div>
+        <div id="site_title"><b>Mochileros sin fronteras</b></div>
         <div id="site_shortcuts">
             <div>Inicio</div>
             <div>Experiencias</div>
@@ -24,7 +24,7 @@
             <div>Foro</div>
             <div>Contacto</div>
         </div>
-        <div class="align_all_items_center" style="margin-left: auto">
+        <div id="logo" class="align_all_items_center">
             <img src="images/Dud.webp" alt="logo" style="width: 60px;">
             <div id="language_selector" class="align_all_items_center box_shadow_background">
                 <div>ES</div>
@@ -236,7 +236,7 @@
             </form>
         </div>
         <div class="align_all_items_center" style="margin-left: auto; margin-right: 10px;"> 
-            <a href="https://www.instagram.com/" target="_blank">
+            <a href="https://www.instagram.com/p/DOodaoADW28/" target="_blank">
                 <img src="/images/icons/instagram.png"
                 alt="Logo de Instagram"
                 style="height: 55px; margin: 10px">
