--- a/index.html
+++ b/index.html
@@ -51,16 +51,17 @@
                 </div>
                 <div id="scroll_experiences" class="align_all_items_center">
                     <div id="experiences_title">
-                        <div class="simple_box_border foreground_text align_all_items_center"
-                             style="margin: 0 auto 0 30px">
-                            <p><b>Paquete Andorrano libre de impuestos</b></p>
+                        <div id="title_name"
+                             class="simple_box_border foreground_text align_all_items_center">
+                             <p><b>Paquete Andorrano</b></p>
                         </div>
-                        <div class="simple_box_border foreground_text align_all_items_center"
-                             style="margin: 0 30px 0 auto"> <p><b>1200€</b></p> </div>
+                        <div id="title_price"
+                             class="simple_box_border foreground_text align_all_items_center">
+                             <p><b>1200€</b></p> </div>
                     </div>
 
                     <div id="experiences_description" class="simple_box_border foreground_text">
-                        <p>Visitas al centro y a la montaña, con transporte incluido.</p>
+                        <p>¡Linre de impuestos! Visitas al centro y a la montaña, con transporte incluido.</p>
                     </div>
 
                     <div id="buy_button" class="box_shadow_background foreground_text align_all_items_center">
