--- a/register.html
+++ b/register.html
@@ -34,21 +34,45 @@
 
     <article id="main" class="align_all_items_center">
         <h1>Registro de nuevos usuarios</h1>
-        <section id="personal_data_grid">
-            <label>
+        <form id="personal_data_grid">
+            <label class="align_all_items_center">
                 <input type="text" placeholder="Nombre" class="box_shadow_background data_box">
             </label>
-            <label>
+            <label class="align_all_items_center">
                 <input type="text" placeholder="Apellidos" class="box_shadow_background data_box">
             </label>
-            <label>
+            <label class="align_all_items_center">
                 <input type="text" placeholder="Correo Electrónico" class="box_shadow_background data_box">
             </label>
-            <label>
+            <label class="align_all_items_center">
                 <input type="text" placeholder="Confirmar Correo" class="box_shadow_background data_box">
             </label>
+        </form>
+
+        <section id="birthday">
+            <h4 style="margin-left: 20px; margin-bottom: 10px;">Fecha de nacimiento</h4>
+            <label>
+                <input type="date" style="margin-left: 50px; margin-top: 5px; height: 40px; width: 25%;">
+            </label>
+        </section>
+
+        <hr>
+
+        <form id="login">
+            <label class="align_all_items_center">
+                <input type="text" placeholder="Login" class="box_shadow_background login_box" style="margin-left: 25%; margin-right: 40px;">
+            </label>
+            <label class="align_all_items_center">
+                <input type="text" placeholder="Contraseña" class="box_shadow_background login_box" style="margin-left: 40px">
+            </label>
+        </form>
+
+        <section id="checkbox">
+            
         </section>
     </article>
+
+
     
     <footer class="align_all_items_center">
         <div id="left_footer">
